--- a/HelloSharp.csproj
+++ b/HelloSharp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LLVMSharp.Interop" Version="15.0.0-beta1" />
+    <PackageReference Include="LLVMSharp.Interop" Version="16.0.0" />
   </ItemGroup>
 
 </Project>
