Update LLVMSharp to 20.1.2

--- a/HelloSharp.csproj
+++ b/HelloSharp.csproj
@@ -5,10 +5,11 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RuntimeIdentifier Condition="'$(RuntimeIdentifier)' == ''">$(NETCoreSdkRuntimeIdentifier)</RuntimeIdentifier>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="LLVMSharp.Interop" Version="16.0.0" />
+    <PackageReference Include="LLVMSharp.Interop" Version="20.1.2" />
   </ItemGroup>
 
 </Project>
